--- a/application/views/scripts/vara-pesca/editar.phtml
+++ b/application/views/scripts/vara-pesca/editar.phtml
@@ -229,7 +229,7 @@
 
             <div>
                 <input class="responsivo" onclick="ajax_esp_capturada(this.form, '<?= $this->url(array("controller" => "vara-pesca", "action" => "insertespeciecapturada"), null, true) ?>','<?=$this->entrevista['vp_id']?>','venda')" type="button" value="Adicionar" />
-                <select style="responsivo-esp" name="selectEspecie" class="responsivo" >
+                <select class="responsivo-esp" style="float:left;" name="selectEspecie" class="responsivo" >
                     <option value="" selected></option>
                     <?php foreach ($this->especies as $key => $especie): ?>
                         <option value="<?= $especie['esp_id']; ?>"><?= $especie['esp_nome_comum']; ?></option>
@@ -238,7 +238,7 @@
                 <input class="responsivo-esp" style="float:left;" type="text" name="quantidade" placeholder="Quantidade" size="10px">
                 <input class="responsivo-esp" style="float:left;" type="text" name="peso" placeholder="Peso" size="10px">
                 <input class="responsivo-esp" style="float:left;" type="text" name="precokg" placeholder="Preço por kg" size="10px">
-                <select name="tipoVenda" class="espc" class="responsivo">
+                <select class="responsivo-esp" name="tipoVenda" class="espc">
                     <option value="" selected></option>
                      <?php foreach ($this->tipovenda as $key => $tipovenda): ?>
                         <option value="<?= $tipovenda['ttv_id']?>"><?= $tipovenda['ttv_tipovenda']; ?></option>
