--- a/application/views/scripts/porto/saomiguel.phtml
+++ b/application/views/scripts/porto/saomiguel.phtml
@@ -1,6 +1,7 @@
 <h2>Porto -> São Miguel</h2>
 
 <script src="js/Chart.min.js"></script>
+<a href="<?= $this->url(array("controller" => "porto", "action" => "relatorioindex"), null, true) ?>" id="botao-ancora">Voltar</a><br/>
 <a id="pdf" href="javascript:print();" title="Gerar PDF"><img src="img/pdf-icon.png" class="icon-relatorios"></a><br/>
 <script type="text/javascript">
 
